feat(tests): add extended withdrawal security tests and validation script
- Introduced a comprehensive test suite for withdrawal security, covering critical gaps and complex attack patterns.
- Implemented tests for API response validation, complex attack detection, edge case handling, and database integrity under stress.
- Created a quick validation script for withdrawal security fixes to ensure critical functionality without long timeouts.
- Updated TypeScript configuration to include new test and validation scripts.
- Ensured all tests enforce security limits, detect suspicious activity, and maintain database integrity.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -112,6 +112,8 @@
     "services/**/*",
     "cronjobs/**/*",
     "./dist/**/*",
-    "node_modules/**/*"
+    "node_modules/**/*",
+    "test-*.js",
+    "validate-*.js"
   ]
 }
